@@ -1,18 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST rails_best_practices-0.3.21.gem 21504 RMD160 792816da32d247a8ae453318394cc68a20d79bf6 SHA1 23d02262ab3cae6f302d73dbfacbe094a28e3531 SHA256 538cd0b1694b611a0aa9041237a0c394a671425f0aa46966971aa8cb3e29aeb3
-DIST rails_best_practices-0.3.26.gem 21504 RMD160 753a828ee9a34dc7b429fcc51733f048ae3e08e9 SHA1 5178eeba937e405531817a658891e2fa88fffd9d SHA256 7a5317d7c02d406e384300089cd79a2dd4d8c0ace056009308882d8b1127fdb5
 DIST rails_best_practices-0.4.0.gem 21504 RMD160 4b0e70206cd123df1ef62cd5dc16708b974a9046 SHA1 1e0ba3cdd0ae7fa6a2b8ebace43907fd4cd8ff6e SHA256 ba0116a8e5a8bdea96a540d9113c1dd44e132ac71ace58963fd4ee1c9f9de245
-EBUILD rails_best_practices-0.3.21.ebuild 763 RMD160 6a42abe9c79867346433de5038133e2c427ec9b0 SHA1 0d085007b557725291f96940c61ed14c6c3a9916 SHA256 c8bad2bf81dcd59b53a9683aea1ec5268e8959015a744de02fa337c0cbd289b9
-EBUILD rails_best_practices-0.3.26.ebuild 763 RMD160 6a42abe9c79867346433de5038133e2c427ec9b0 SHA1 0d085007b557725291f96940c61ed14c6c3a9916 SHA256 c8bad2bf81dcd59b53a9683aea1ec5268e8959015a744de02fa337c0cbd289b9
 EBUILD rails_best_practices-0.4.0.ebuild 763 RMD160 6a42abe9c79867346433de5038133e2c427ec9b0 SHA1 0d085007b557725291f96940c61ed14c6c3a9916 SHA256 c8bad2bf81dcd59b53a9683aea1ec5268e8959015a744de02fa337c0cbd289b9
-MISC ChangeLog 741 RMD160 803446c4343cd7262f18640871cb7ddb3681f08b SHA1 cdf822fc9baa12576c566c32896be35fb5962d00 SHA256 106e05d4e5387274080e51cd4845668e8e44644ca5d703c6a68964617eee1f9d
+MISC ChangeLog 891 RMD160 300a9a314b85aa9d388bc42886a5aea7788d3c0e SHA1 ccf575b146bd956d962cb55002b8d386f026110d SHA256 e6938c9583e6eb54f3e5b38121842a1a1cb779fec3d3780386b269151f8618ef
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iF4EAREIAAYFAkybaGEACgkQZihJkut28SsAlwD+N0K+41xB1tZ1tmBrNVLqFGq+
-xOxFJ7i+4z6FpMOKscQBAMRpyXrqw6C8OOfBAuUvl+SzLqbLGswosk69Wwd9IOtI
-=uhPE
+iF4EAREIAAYFAk0+yCAACgkQrnu0mw69JkpjHwD+MfGOooc8hDz081omx3XOJ5O+
+QCwHwEJDRz6NsP6XoEwA/20C6RHxJSMMSb2ZO+k4p6TaHz6ANHIFuQ2KCXrbopo/
+=vbSh
 -----END PGP SIGNATURE-----
