@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/rails_best_practices
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  25 Jan 2011; Hans de Graaff <graaff@gentoo.org>
+  -rails_best_practices-0.3.21.ebuild, -rails_best_practices-0.3.26.ebuild:
+  Remove old versions.
 
 *rails_best_practices-0.4.0 (23 Sep 2010)
 
